# wasm-ic

./: .gitignore  Cargo.toml  README.md  Veryl.toml
docs/: alu.md  branch_table.md  decoder.md  fetch.md  memory.md  roadmap.md  stack.md
patches/marlin-veryl/: Cargo.toml
patches/marlin-veryl-macro/: Cargo.toml
patches/marlin-veryl-macro/src/: lib.rs
patches/marlin-veryl/src/: lib.rs
src/: hello.veryl  lib.rs  wasm_alu.veryl  wasm_alu_pkg.veryl  wasm_branch_table.veryl  wasm_core_tb.veryl  wasm_decode.veryl  wasm_fetch.veryl  wasm_memory.veryl  wasm_stack.veryl
tests/: marlin_wat.rs
tests/wat/: add.wat  branch.wat  expr.wat  if_else.wat  loop.wat  memory.wat
